--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,15 @@ android {
         disable 'InvalidPackage'
     }
 
+    signingConfigs {
+        release {
+            storeFile file("flutterTodo/todo.jks")
+            storePassword "12345"
+            keyAlias "todo"
+            keyPassword "12345"
+        }
+    }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.sapient.flutter_todo_app"
@@ -52,7 +61,11 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
 }
+
+
+
 
 flutter {
     source '../..'
