--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -19,4 +19,11 @@ jobs:
     - name: Install dependencies
       run: flutter pub get
     - name: Run tests
-      run: pub run test
+      run: flutter test
+    - name: build
+      run: flutter build apk
+      # Upload generated apk to the artifacts.
+    - uses: actions/upload-artifact@v1
+      with:
+        name: release-apk
+        path: build/app/outputs/apk/release/app-release.apk
