--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     # This job will run on ubuntu virtual machine
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
