--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -1,27 +1,18 @@
-name: Flutter CI
-
-# This workflow is triggered on pushes to the repository.
-
-on:
-  push:
-    branches:
-    - master
-    
-# on: push    # Default will running for every branch.
-    
+on: push
 jobs:
-  build:
-    # This job will run on ubuntu virtual machine
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
+      # The flutter action needs java so include it
       - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
+      # Include the flutter action
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '1.12.x' # you can use 1.12
-          channel: 'dev' # optional, default to: 'stable'
+          channel: 'stable'
+      # Get flutter packages
       - run: flutter pub get
-      - run: flutter test
-      - run: flutter build apk
+      # Build :D
+      - run: flutter build aot
