--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -1,23 +1,39 @@
 on: push
 jobs:
-  build-and-test:
+  build:
+    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
+
+      # Setup Java environment in order to build the Android app.
       - uses: actions/checkout@v1
-      # The flutter action needs java so include it
       - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
-      # Include the flutter action
+
+      # Setup the flutter environment.
       - uses: subosito/flutter-action@v1
         with:
-          channel: 'stable'
-      # Get flutter packages
+          channel: 'beta' # 'dev', 'alpha', default to: 'stable'
+          # flutter-version: '1.12.x' # you can also specify exact version of flutter
+
+      # Get flutter dependencies.
       - run: flutter pub get
-      # Build :D
-      - run: flutter build aot
-        # Upload generated apk to the artifacts.
+
+      # Check for any formatting issues in the code.
+      - run: flutter format --set-exit-if-changed .
+
+      # Statically analyze the Dart code for any errors.
+      - run: flutter analyze .
+
+      # Run widget tests for our flutter project.
+      - run: flutter test
+
+      # Build apk.
+      - run: flutter build apk
+
+      # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v1
-         with:
-           name: release-apk
-           path: build/app/outputs/apk/release/app-release.apk
+        with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
